[package]
name = "about_me"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.6.9", features = ["csr", "nightly"] }

[build]
# Allow disabling minification
no_minification = false
# Allow disabling sub-resource integrity (SRI)
no_sri = false
